# ai-monitor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  commit.sh  ecosystem.config.js  main.py  monitor.py  pm2.sh  pyproject.minimal.toml  pyproject.toml  run.sh  setup.py  setup_termux.sh
docs/plans/: 2026-02-23-optimization-design.md
src/: __init__.py  alert.py  alert_types.py  circuit_breaker.py  config.py  logger.py  logger_simple.py  main.py  metrics.py  monitor.py  retry.py  termux_alert.py
